added a note about using the jwt token

--- a/JwtAuthentication.Client/Pages/FetchData.cshtml
+++ b/JwtAuthentication.Client/Pages/FetchData.cshtml
@@ -40,6 +40,7 @@ else
 
     protected override async Task OnInitAsync()
     {
+        // todo: Update to include the token from localStorage
         forecasts = await Http.GetJsonAsync<WeatherForecast[]>("api/SampleData/WeatherForecasts");
     }
 }
